--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "eslint": "^8.19.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.2.8",
+    "pug": "^3.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
